--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,15 @@ body{
   font-family: 'Google Sans', Arial, sans-serif;
 }
 
+.bibtex-container {
+    /* max-height: 200px; 或者你需要的任何高度 */
+    overflow-y: auto; /* 垂直方向上超出时显示滚动条 */
+    width: 100%; /* 或者指定一个宽度 */
+    background-color: #f5f5f5; /* 浅灰色背景 */
+    padding: 10px; /* 添加一些内边距 */
+    font-size: 15px;
+}
+
 .block{
   margin: 30px 0;
   width: min(900px, calc(100% - 60px));
@@ -99,6 +108,14 @@ body{
   font-size: 19px;
   text-align: justify;
 }
+
+.author {
+    font-family: 'Google Sans Text', Arial, sans-serif;
+    max-width: 900px;
+    line-height: 1.7em;
+    font-size: 19px;
+    text-align: center;
+  }
 
 b {
   color: rgb(66, 133, 244);
