--- a/styles.css
+++ b/styles.css
@@ -128,8 +128,8 @@ b {
   width: fit-content;
   padding: 14px 28px;
   border-radius: 5px;
-  margin-top: 35px;
-  margin-right: 20px;
+  margin-top: 10px;
+  /* margin-right: 20px; */
   font-size: 19px;
   cursor: pointer;
   transition: background-color 0.5s ease;
